style.css
/* ... */
li.next a:hover:before{
	content: "\2190";
	position: absolute;
	display: block;
	top: 42%;
	left: 0;
	background-color: #BFBFBF;
	color: #444;
	width: 20px;
	height: 20px;
	padding-left: 5px;
	text-decoration: none;
	box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
}

li.previous a:hover:before{
	content: "\2192";
	position: absolute;
	display: block;
	top: 42%;
	right: 0;
	background-color: #BFBFBF;
	color: #444;
	width: 20px;
	height: 20px;
	padding-left: 5px;
	text-decoration: none;
	box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
}


/* widget styles */

.widget{
	margin-bottom: 18px;
}

.widgettitle{
	margin-bottom: 9px;
}

#tag-cloud{
	margin-bottom: 18px;
	line-height: 160%;
}

/* for some reason the bs version currently available for download doesn't have this style */
.label{
	text-transform: uppercase;
}


#tag-cloud a{
	white-space: pre;
}

/* change default form padding for search */

.widget_search form{
	padding-left: 0;
}


/* calendar widget */

#calendar_wrap{
	border: 1px solid #ddd;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding: 5px;
}

#wp-calendar{
	width: 100%;
	
}

#wp-calendar caption{
	font-weight: bold;
	padding: 8px;
}

#wp-calendar tr{
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
}

#wp-calendar tr:last-child{
	border-bottom: none;
}

#wp-calendar td{
	text-align: center;
	padding: 8px 0;
}

blockquote.pull-left{
	padding-right: 15px;
}

#inner-footer {
	text-align: center;
	color: #888;
	font-size: 9px;
}

#inner-footer a {
	color: #888;
	text-decoration: underline;
}

@media only screen and (min-width: 940px) {
	
	.container-fluid{
		max-width: 900px;
		margin: 0 auto;
		padding-left: 20px;
		padding-right: 20px;
	}
	
	#inner-footer{
		padding: 0;
	}
	
	#content{
		padding-left: 0;
		padding-right: 0;
	}
	
	.topbar-inner{
		padding: 0;
	}
	
	.topbar form.pull-right {
		float: right;
	}
	
	.navbar-form, .navbar-search {
		margin-top: 6px;
		margin-bottom: 0;
	}
	
	.navbar-search{
		padding-left: 0;
	}
	
	.sidebar{
		margin-top: 0 !important;
	}
	
	.blog .hero-unit{
		margin-top: 10px;
	}
	
	.page-template-page-homepage-php .hero-unit,
	.blog .hero-unit{
		padding: 60px;
	}
	
	.hero-unit h1 {
		font-size: 60px;
	}
	
	/* hide edit comment button and show on hover on desktop version */
	.edit-comment{
		display: none;
	}
	
	.vcard:hover .edit-comment{
		display: inline-block;
	}
	
	#s{
		width: 210px;
	}
	
	.comment .vcard .comment-text{
		padding-left: 0;
		padding-right: 0;
	}
}

/*  Added to keep SyntaxHighlighter working*/
code {
    border: medium none;
    color: #333333;
    display: inline;
    font-family: Monaco, Consolas, Lucida Console, Courier New ;
    font-size: 15px;
    background: none;
    padding: 0;
    margin: 0;
}

td.code .container:before, td.code .container:after {
 content: none;
}

.syntaxhighlighter {
	overflow-x: none;
	overflow-y: auto;
}

.syntaxhighlighter .line {
    white-space: pre !important;
}

/* Custom formatting for koalite.com */
body, h1, h2, h3, h4, h5, h6, p, li {
	font-family: 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	color: #505050;
}

h1 {
	font-size: 34px;
}

h1 small {
	font-size: 14px;
}

p, li {
 line-height: 140%;
 font-size: 16px;
}

p, pre, ul {
 margin-bottom: 24px;
}

pre {
	margin-top: 12px;
}

.aligncenter {
	text-align: center;
	margin: 0 auto;
}

.alignright {
	text-align: right;
}

.wp-caption-text {
	font-size: 12px;
	color: #666;
	font-style: italic;
}

section.post_content h3 {
	margin-top: 15px;
	margin-bottom: 10px;
}

a {
	color: #D35400;
	text-decoration: none;
}

p > strong, li > strong {
	font-weight: 600;
	color: #404040
}

.post_content a {
	/* Remarco un poco los enlaces en los cuerpos de los posts */
	border-bottom: 1px dotted #e67e22;
}

a:hover {
	color: #e67e22;
	text-decoration: none;
	border-bottom: 1px solid #e67e22;
}

div[id^="attachment"] a, .trackable_sharing a {
	/* ... pero quito el borde a los enlaces de las imágenes y otras cosillas*/
	border: none;
}

a.no-border, a:hover.no-border {
	border: none;
}

/* Los títulos de los posts no los quiero en rojo */
.post h1 a[rel="bookmark"], .post h1 a[rel="bookmark"]:hover {
	color: #505050;
	border-bottom: none;
}

/* Configuro los trackbacks/pingbacks para que no muestren el texto del enlace */
.pingback .comment-text h4:before, .trackback .comment-text h4:before  {
	content: "Pingback: ";
	display: block;
} 
.pingback .comment-text p, .trackback .comment-text p {
	display: none;
} 

/* Cabecera */
.blog-header {
	background: top left no-repeat url(img/logo.png);
	border-bottom: 1px solid #ddd;
	padding-bottom: 15px;
	margin-top: 35px;
}

.blog-header h1 {
	font-size: 64px;
	color: #404040;
	text-shadow: 3px 3px 2px rgba(0,0,0,0.2);
	margin-top: 4px;
	margin-left: 190px;
}

.blog-header .tagline {
	margin-top: 12px;
	font-size: 20px;
	color: #888;
	font-weight: 500;
	margin-left: 190px;
}

@media only screen and (max-width: 480px) {
	.navbar-fixed-top {
		position: static;
	}

	body {
		padding-top: 0;
	}
}

@media only screen and (min-width: 481px) {
	.navbar-fixed-top {
		position: fixed;
	}

	body {
		padding-top: 40px;
	}
}

@media only screen and (max-width: 480px) {
	.blog-header {
		background: none;
	}
	
	.blog-header h1, .blog-header .tagline {
		margin-left: 0px;
	}
}

/* Alineado de imágenes (deshabilitado para móviles) */
@media only screen and (min-width: 481px) {
	.wp-caption.alignleft {
		display: inline;
		float: left;
		margin-right: 20px;
		margin-top: 4px;
	}
	.wp-caption.alignright {
		display: inline;
		float: right;
		margin-left: 20px;
		margin-top: 4px;
	}
	.wp-caption.aligncenter {
		clear: both;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
	.wp-caption.alignleft,
	.wp-caption.alignright,
	.wp-caption.aligncenter {
		margin-bottom: 10px;
	}
}
/* ... */

